# three_in_row

./: .env.example  .gitignore  README.md  docker-compose.yml  railway.toml
backend/: alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_add_player_to_games.py
backend/src/: main.py
backend/src/application/dto/: games.py  leaderboard.py
backend/src/application/services/: games_service.py  leaderboard_service.py
backend/src/domain/game/: board_gen.py  config_presets.py  engine.py  entities.py  errors.py  gravity.py  item_codec.py  match_finder.py  move_finder.py  rules.py  scoring.py  value_objects.py
backend/src/infrastructure/: settings.py
backend/src/infrastructure/db/: session.py  uow.py
backend/src/infrastructure/db/models/: __init__.py  game.py  leaderboard.py
backend/src/infrastructure/db/repositories/: games_repo.py  leaderboard_repo.py
backend/src/presentation/: dependencies.py  exception_handlers.py
backend/src/presentation/routers/: games.py  leaderboard.py
docker/: backend.Dockerfile  frontend.Dockerfile
docker/nginx/: nginx.conf
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: types.ts
frontend/src/components/: Board.tsx  Controls.tsx  SnapshotStepper.tsx
frontend/src/pages/: CreateGame.tsx  Game.tsx  Leaderboard.tsx
scripts/: dev.sh
tests/unit/domain/: test_engine.py  test_match_and_gravity.py  test_move_finder.py
