[tool.poetry]
name = "three-in-row-api"
version = "0.1.0"
description = "Match-3 game backend with FastAPI"
authors = ["Vadim Belyaev <vadim@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
SQLAlchemy = "^2.0.23"
asyncpg = "^0.29.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
alembic = "^1.12.1"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
